# android-device-monitor

./: Cargo.toml  README.md  monitor.py  package.json  tsconfig.json
src/: index.ts  main.rs
