[package]
name = "android-device-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
prettytable-rs = "0.11"

[[bin]]
name = "adm"
path = "src/main.rs"
